alterações das imagens

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
             <!-- Acomodações Card -->
             <div class="acomodacoes-box">
-                <img src="images/Suíte Dupla - (10).jpg"
+                <img src="images/suite-dupla-01.jpg"
                     alt="">
                 <span class="acomodacoes-img-legenda">VIP ACESSO</span>
 
@@ -89,7 +89,7 @@
             <!-- Final do card - Alterando aqui -->
 
             <div class="acomodacoes-box">
-                <img src="images/Suíte Dupla - (2).jpg"
+                <img src="images/suite-dupla-01.jpg"
                     alt="">
                 <span class="acomodacoes-img-legenda">VIP ACESSO</span>
 
@@ -121,7 +121,7 @@
             </div>
 
             <div class="acomodacoes-box">
-                <img src="images/Suíte Dupla - (5).jpg"
+                <img src="images/suite-dupla-01.jpg"
                     alt="">
                 <span class="acomodacoes-img-legenda">VIP ACESSO</span>
 
@@ -153,7 +153,7 @@
             </div>
 
             <div class="acomodacoes-box">
-                <img src="images/Suíte Quádrupla - (4).jpg"
+                <img src="images/suite-dupla-01.jpg"
                     alt="">
                 <span class="acomodacoes-img-legenda">VIP ACESSO</span>
 
@@ -185,7 +185,7 @@
             </div>
 
             <div class="acomodacoes-box">
-                <img src="images/Suíte Quádrupla - (7).jpg"
+                <img src="images/suite-dupla-01.jpg"
                     alt="">
                 <span class="acomodacoes-img-legenda">VIP ACESSO</span>
 
@@ -217,7 +217,7 @@
             </div>
 
             <div class="acomodacoes-box">
-                <img src="images/Suíte Quádrupla - (4).jpg"
+                <img src="images/suite-dupla-01.jpg"
                     alt="">
                 <span class="acomodacoes-img-legenda">VIP ACESSO</span>
 
@@ -249,7 +249,7 @@
             </div>
 
             <div class="acomodacoes-box">
-                <img src="images/Suíte Dupla - (4).jpg"
+                <img src="images/suite-dupla-01.jpg"
                     alt="">
                 <span class="acomodacoes-img-legenda">VIP ACESSO</span>
 
@@ -281,7 +281,7 @@
             </div>
 
             <div class="acomodacoes-box">
-                <img src="images/Suíte Quíntupla e Sextupla - (1).jpg"
+                <img src="images/suite-dupla-01.jpg"
                     alt="">
                 <span class="acomodacoes-img-legenda">VIP ACESSO</span>
 
