--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
             <a href="#" class="btn">Reserve Já</a>
         </div>
     </section>
-    <section class="localizacao"> <!-- depoimentos-->
+    <section class="depoimentos"> <!-- depoimentos-->
         <h2 class="heading">Depoimentos</h2>
         <div class="localizacao-container">
 
