Novas páginas sendo adicionadas

--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
 
             <!-- Acomodações Card -->
             <div class="acomodacoes-box">
+                <a href="suites-duplas.html">
                 <img src="images/suite-dupla-01.jpg"
-                    alt="">
+                    alt=""></a>
                 <span class="acomodacoes-img-legenda">VIP ACESSO</span>
 
                 <div class="acomodacoes-text">
