--- a/suites-duplas.html
+++ b/suites-duplas.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="suites.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>Pousada Sol e Descanso</title>
 </head>
@@ -64,7 +64,9 @@
             <button class="next" onclick="changeSlide(1)">&#10095;</button>
         </div>
 
-        <a href="#" class="btn">Reservar Agora</a>
+        <div class="center">
+            <a href="#" class="btn">Reservar Agora</a>
+        </div>
 
         <p>Desfrute do conforto e do bem-estar que você e sua família merecem em nossos apartamentos, planejados com
             tudo o que é essencial para tornar sua estadia tranquila e agradável. Cada detalhe é cuidadosamente pensado
@@ -94,11 +96,11 @@
                 <a href="#" class="btn">Reservar Agora</a>
 
             </div>
+
             <div class="cardBox-slider">
                 <!--Com slider desse tamanho-->
-                <img src="" alt="">
+                <img src="images/suite-dupla-01.jpg" alt="">
 
-                <p>Imagens relacionadas a suite dupla</p>
             </div>
         </div>
 
@@ -124,9 +126,8 @@
             </div>
             <div class="cardBox-slider">
                 <!--Com slider desse tamanho-->
-                <img src="" alt="">
+                <img src="images/suite-dupla-01.jpg" alt="">
 
-                <p>Imagens relacionadas a suite dupla</p>
             </div>
         </div>
 
@@ -152,9 +153,8 @@
             </div>
             <div class="cardBox-slider">
                 <!--Com slider desse tamanho-->
-                <img src="" alt="">
+                <img src="images/suite-dupla-01.jpg" alt="">
 
-                <p>Imagens relacionadas a suite dupla</p>
             </div>
         </div>
 
@@ -180,9 +180,8 @@
             </div>
             <div class="cardBox-slider">
                 <!--Com slider desse tamanho-->
-                <img src="" alt="">
+                <img src="images/suite-dupla-01.jpg" alt="">
 
-                <p>Imagens relacionadas a suite dupla</p>
             </div>
         </div>
         <!--
@@ -220,7 +219,7 @@
         <div class="localizacao-map">
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d772.235987472655!2d-42.023170005635976!3d-22.972530268106667!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x97199cdb217f35%3A0xc423684c249cdb05!2sPousada%20Sol%20e%20Descanso!5e0!3m2!1sen!2sbr!4v1730764054416!5m2!1sen!2sbr"
-                width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
+                width="100%" height="350px" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
 
@@ -254,7 +253,6 @@
 
         <p class="copyright">@ 2024 Pousada Sol e Descanso | All rights Reserved</p>
 
-        <a href="#home" class="btn-top">+</a>
 
     </footer>
 
