--- a/suites.html
+++ b/suites.html
@@ -30,8 +30,8 @@
 
         <h2 class="heading">Nossas Suites</h2>
 
-        <div class="slideshow-container">
-            <!-- Imagens do slideshow -->
+        <!-- <div class="slideshow-container">
+
             <div class="slideshow">
                 <div class="slide"
                     style="background-image: url('https://img.freepik.com/fotos-premium/majestic-mountain-lake-em-serene-sunset-landscape_994764-153336.jpg?semt=ais_hybrid');">
@@ -59,15 +59,15 @@
                 </div>
             </div>
 
-            <!-- Botões para navegação manual -->
+
             <button class="prev" onclick="changeSlide(-1)">&#10094;</button>
             <button class="next" onclick="changeSlide(1)">&#10095;</button>
         </div>
 
         <div class="center">
             <a href="#" class="btn">Reservar Agora</a>
-        </div>
-
+        </div> -->
+<br>
         <p>Desfrute do conforto e do bem-estar que você e sua família merecem em nossos apartamentos, planejados com
             tudo o que é essencial para tornar sua estadia tranquila e agradável. Cada detalhe é cuidadosamente pensado
             para proporcionar uma experiência relaxante.
@@ -256,7 +256,7 @@
 
     </footer>
 
-    <script src="script.js"></script>
+    <script src="slide-show-suite.js"></script>
     <script src="https://kit.fontawesome.com/52262753f8.js" crossorigin="anonymous"></script>
 </body>
 
