alterações em suite

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           </svg>
         </a>
       </div>
-      <a href="#" class="btn">Reserve Já</a>
+      <a href="https://book.omnibees.com/hotel/19618" class="btn">Reserve Já</a>
     </div>
     <div class="home-img">
       <img src="images/img-suite.png" alt="">
@@ -119,7 +119,7 @@
           </div>
 
           <div class="cardBox-btn">
-            <a href="#">Reserve Já</a>
+            <a href="https://book.omnibees.com/hotel/19618">Reserve Já</a>
           </div>
 
         </div>
@@ -151,7 +151,7 @@
           </div>
 
           <div class="cardBox-btn">
-            <a href="#">Reserve Já</a>
+            <a href="https://book.omnibees.com/hotel/19618">Reserve Já</a>
           </div>
         </div>
         <div class="slider-item">
@@ -182,7 +182,7 @@
           </div>
 
           <div class="cardBox-btn">
-            <a href="#">Reserve Já</a>
+            <a href="https://book.omnibees.com/hotel/19618">Reserve Já</a>
           </div>
         </div>
         <div class="slider-item">
@@ -213,7 +213,7 @@
           </div>
 
           <div class="cardBox-btn">
-            <a href="#">Reserve Já</a>
+            <a href="https://book.omnibees.com/hotel/19618">Reserve Já</a>
           </div>
         </div>
         <div class="slider-item">
@@ -244,7 +244,7 @@
           </div>
 
           <div class="cardBox-btn">
-            <a href="#">Reserve Já</a>
+            <a href="https://book.omnibees.com/hotel/19618">Reserve Já</a>
           </div>
         </div>
         <div class="slider-item">
@@ -275,7 +275,7 @@
           </div>
 
           <div class="cardBox-btn">
-            <a href="#">Reserve Já</a>
+            <a href="https://book.omnibees.com/hotel/19618">Reserve Já</a>
           </div>
         </div>
         <div class="slider-item">
@@ -306,7 +306,7 @@
           </div>
 
           <div class="cardBox-btn">
-            <a href="#">Reserve Já</a>
+            <a href="https://book.omnibees.com/hotel/19618">Reserve Já</a>
           </div>
         </div>
         <div class="slider-item">
@@ -337,7 +337,7 @@
           </div>
 
           <div class="cardBox-btn">
-            <a href="#">Reserve Já</a>
+            <a href="https://book.omnibees.com/hotel/19618">Reserve Já</a>
           </div>
         </div>
       </div>
@@ -350,7 +350,7 @@
     <h2>Pousada</h2>
     <div class="pousada-container">
       <div class="pousada-text">
-        <h3>Nossa Pousada</h3>
+        <!--<h3>Nossa Pousada</h3>-->
         <ul>
           <li>Camas de molas ensacadas de solteiro / casal</li>
           <li>Frigobar</li>
