--- a/suites.html
+++ b/suites.html
@@ -93,7 +93,7 @@
                     <li>Bancada para trabalho trabalho</li>
                 </ul>
 
-                <a href="#" class="btn">Reservar Agora</a>
+                <a href="https://book.omnibees.com/hotel/19618" class="btn">Reservar Agora</a>
 
             </div>
 
@@ -121,12 +121,12 @@
                     <li>Bancada para trabalho trabalho</li>
                 </ul>
 
-                <a href="#" class="btn">Reservar Agora</a>
+                <a href="https://book.omnibees.com/hotel/19618" class="btn">Reservar Agora</a>
 
             </div>
             <div class="cardBox-slider">
                 <!--Com slider desse tamanho-->
-                <img src="images/suite-dupla-01.jpg" alt="">
+                <img src="images/2 - Acomodações Triplas - 201 e 301/Suíte Tripla - (1).jpg" alt="">
 
             </div>
         </div>
@@ -148,12 +148,12 @@
                     <li>Bancada para trabalho trabalho</li>
                 </ul>
 
-                <a href="#" class="btn">Reservar Agora</a>
+                <a href="https://book.omnibees.com/hotel/19618" class="btn">Reservar Agora</a>
 
             </div>
             <div class="cardBox-slider">
                 <!--Com slider desse tamanho-->
-                <img src="images/suite-dupla-01.jpg" alt="">
+                <img src="images/3 - Acomodações Quádruplas - 104, 203, 204, 205 e 304/Suíte Quádrupla - (1).jpg" alt="">
 
             </div>
         </div>
@@ -175,12 +175,12 @@
                     <li>Bancada para trabalho trabalho</li>
                 </ul>
 
-                <a href="#" class="btn">Reservar Agora</a>
+                <a href="https://book.omnibees.com/hotel/19618" class="btn">Reservar Agora</a>
 
             </div>
             <div class="cardBox-slider">
                 <!--Com slider desse tamanho-->
-                <img src="images/suite-dupla-01.jpg" alt="">
+                <img src="images/4 - Acomodações Quíntuplas e Sextuplas - 105/Suíte Quíntupla e Sextupla - (1).jpg" alt="">
 
             </div>
         </div>
@@ -233,28 +233,14 @@
 
     <footer class="footer">
         <div class="social">
-            <a href="#"><i class="bi bi-facebook"></i></a>
-            <a href="#"><i class="bi bi-whatsapp"></i></a>
-            <a href="#"><i class="bi bi-instagram"></i></a>
-            <a href="#"><i class="bi bi-instagram"></i></a>
+          <a href="#"><i class="bi bi-facebook"></i></a>
+          <a href="#"><i class="bi bi-whatsapp"></i></a>
+          <a href="#"><i class="bi bi-instagram"></i></a>
+          <a href="#"><i class="bi bi-instagram"></i></a>
         </div>
-
-
-        <!--
-
-        <div class="fale-conosco">
-
-        </div>
-        <div class="endereco">
-
-        </div>
-
-        -->
 
         <p class="copyright">@ 2024 Pousada Sol e Descanso | All rights Reserved</p>
-
-
-    </footer>
+      </footer>
 
     <script src="slide-show-suite.js"></script>
     <script src="https://kit.fontawesome.com/52262753f8.js" crossorigin="anonymous"></script>
