imagens nas acomodações

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <div class="cardBox-img">
             <a href="suites.html">
               <img
-                src="https://img.freepik.com/fotos-premium/bela-paisagem-natural-de-um-grande-barco-de-viagem-navegando-no-mar-com-o-ceu-colorido-durante-o-fundo-do-por-do-sol-na-tailandia-widescreen-16-9_536080-1232.jpg?w=826">
+                src="images/img-suite-dupla.png">
             </a>
           </div>
           <div class="cardBox-text">
@@ -127,7 +127,7 @@
           <div class="cardBox-img">
             <a href="suites.html">
               <img
-                src="https://img.freepik.com/fotos-premium/bela-paisagem-natural-de-um-grande-barco-de-viagem-navegando-no-mar-com-o-ceu-colorido-durante-o-fundo-do-por-do-sol-na-tailandia-widescreen-16-9_536080-1232.jpg?w=826">
+                src="images/img-suite-02.png">
             </a>
           </div>
           <div class="cardBox-text">
@@ -158,7 +158,7 @@
           <div class="cardBox-img">
             <a href="suites.html">
               <img
-                src="https://img.freepik.com/fotos-premium/bela-paisagem-natural-de-um-grande-barco-de-viagem-navegando-no-mar-com-o-ceu-colorido-durante-o-fundo-do-por-do-sol-na-tailandia-widescreen-16-9_536080-1232.jpg?w=826">
+                src="images/img-suite-01.png">
             </a>
           </div>
           <div class="cardBox-text">
@@ -189,7 +189,7 @@
           <div class="cardBox-img">
             <a href="suites.html">
               <img
-                src="https://img.freepik.com/fotos-premium/bela-paisagem-natural-de-um-grande-barco-de-viagem-navegando-no-mar-com-o-ceu-colorido-durante-o-fundo-do-por-do-sol-na-tailandia-widescreen-16-9_536080-1232.jpg?w=826">
+                src="images/img-suite-03.png">
             </a>
           </div>
           <div class="cardBox-text">
@@ -220,7 +220,7 @@
           <div class="cardBox-img">
             <a href="suites.html">
               <img
-                src="https://img.freepik.com/fotos-premium/bela-paisagem-natural-de-um-grande-barco-de-viagem-navegando-no-mar-com-o-ceu-colorido-durante-o-fundo-do-por-do-sol-na-tailandia-widescreen-16-9_536080-1232.jpg?w=826">
+                src="images/img-suite-04.png">
             </a>
           </div>
           <div class="cardBox-text">
@@ -251,7 +251,7 @@
           <div class="cardBox-img">
             <a href="suites.html">
               <img
-                src="https://img.freepik.com/fotos-premium/bela-paisagem-natural-de-um-grande-barco-de-viagem-navegando-no-mar-com-o-ceu-colorido-durante-o-fundo-do-por-do-sol-na-tailandia-widescreen-16-9_536080-1232.jpg?w=826">
+                src="images/img-suite-05.png">
             </a>
           </div>
           <div class="cardBox-text">
@@ -282,7 +282,7 @@
           <div class="cardBox-img">
             <a href="suites.html">
               <img
-                src="https://img.freepik.com/fotos-premium/bela-paisagem-natural-de-um-grande-barco-de-viagem-navegando-no-mar-com-o-ceu-colorido-durante-o-fundo-do-por-do-sol-na-tailandia-widescreen-16-9_536080-1232.jpg?w=826">
+                src="images/img-suite-06.png">
             </a>
           </div>
           <div class="cardBox-text">
@@ -313,7 +313,7 @@
           <div class="cardBox-img">
             <a href="suites.html">
               <img
-                src="https://img.freepik.com/fotos-premium/bela-paisagem-natural-de-um-grande-barco-de-viagem-navegando-no-mar-com-o-ceu-colorido-durante-o-fundo-do-por-do-sol-na-tailandia-widescreen-16-9_536080-1232.jpg?w=826">
+                src="images/img-suite-07.png">
             </a>
           </div>
           <div class="cardBox-text">
