--- a/atividades.html
+++ b/atividades.html
@@ -28,46 +28,10 @@
     <!-- Inicio da Section Hero -->
     <section class="section-slide">
 
-        <h2 class="heading">Nossas Atividades</h2>
+        <h2 class="heading">Nossas Atividades e Passeios</h2>
 
-        <div class="slideshow-container">
-            <!-- Imagens do slideshow -->
-            <div class="slideshow">
-                <div class="slide"
-                    style="background-image: url('https://img.freepik.com/fotos-premium/majestic-mountain-lake-em-serene-sunset-landscape_994764-153336.jpg?semt=ais_hybrid');">
-                </div>
-                <div class="slide"
-                    style="background-image: url('https://img.freepik.com/fotos-gratis/belas-paisagens-montanhosas_23-2150787836.jpg?semt=ais_hybrid');">
-                </div>
-                <div class="slide"
-                    style="background-image: url('https://img.freepik.com/fotos-gratis/belas-paisagens-naturais-de-cachoeiras_23-2150787986.jpg?w=360');">
-                </div>
-                <div class="slide"
-                    style="background-image: url('https://img.freepik.com/fotos-premium/eleganca-do-por-do-sol-no-ceu-da-montanha_1234738-247535.jpg?size=626&ext=jpg&ga=GA1.1.2008272138.1723075200&semt=ais_hybrid');">
-                </div>
-                <div class="slide"
-                    style="background-image: url('https://img.freepik.com/fotos-premium/montanhas-cobertas-de-neve-no-reflexo-do-por-do-sol_1290835-4751.jpg');">
-                </div>
-                <div class="slide"
-                    style="background-image: url('https://img.freepik.com/fotos-gratis/belas-paisagens-montanhosas_23-2150787936.jpg');">
-                </div>
-                <div class="slide"
-                    style="background-image: url('https://img.freepik.com/fotos-premium/belo-nascer-do-sol-de-verao-na-montanha_114016-14461.jpg?size=626&ext=jpg&ga=GA1.1.2008272138.1721606400&semt=ais_user');">
-                </div>
-                <div class="slide"
-                    style="background-image: url('https://img.freepik.com/fotos-premium/paisagem-colorida-com-altas-montanhas-do-himalaia_1082220-80.jpg');">
-                </div>
-            </div>
 
-            <!-- Botões para navegação manual -->
-            <button class="prev" onclick="changeSlide(-1)">&#10094;</button>
-            <button class="next" onclick="changeSlide(1)">&#10095;</button>
-        </div>
-
-        <div class="center">
-            <a href="#" class="btn">Reservar Agora</a>
-        </div>
-
+<br>
         <p>Desfrute do conforto e do bem-estar que você e sua família merecem em nossos apartamentos, planejados com
             tudo o que é essencial para tornar sua estadia tranquila e agradável. Cada detalhe é cuidadosamente pensado
             para proporcionar uma experiência relaxante.
@@ -78,22 +42,25 @@
         <div class="cardBox-container">
 
             <div class="cardBox-suite">
-                <h3>Suite dupla</h3>
+                <h3>Passeio de Barco</h3>
 
-                <p>Este apartamento acomoda até 2 pessoas em uma cama de casal.</p>
-                <ul>
-                    <li>Camas de molas ensacadas de solteiro / casal</li>
-                    <li>Ar condicionado Sprit Super conforti</li>
-                    <li>Frigobar</li>
-                    <li>Internet Wi-Fi</li>
-                    <li>Armário de roupa</li>
-                    <li>TV Smart</li>
-                    <li>Enxoval em algodão</li>
-                    <li>Roupa de Banho em Algodão</li>
-                    <li>Bancada para trabalho trabalho</li>
-                </ul>
+                <p>O Passeio de Barco em Arraial do Cabo é uma aventura inesquecível, 
+                    ideal para famílias que desejam explorar algumas das praias mais 
+                    lindas do Brasil.</p>
+                    <ul>
 
-                <a href="#" class="btn">Reservar Agora</a>
+                        <li>Praia do Pontal do Atalaia</li>
+                        <li>Prainhas do Pontal do Atalaia</li>
+                        <li>Ilha do farol (Reserva da Marinha)</li>
+                        <li>Face do gorila</li>
+                        <li>Gruta do amor</li>
+                        <li>Fenda de NS°</li>
+                        <li>Gruta azul</li>
+                        <li>Buraco do meteoro</li>
+                        <li>Enseada da Praia do Forno</li>
+                    </ul>
+
+                <a href="https://book.omnibees.com/hotel/19618" class="btn">Saiba Mais</a>
 
             </div>
 
@@ -106,7 +73,7 @@
 
         <div class="cardBox-container">
             <div class="cardBox-suite">
-                <h3>Suite tripla</h3>
+                <h3>Passeio de Bugre</h3>
 
                 <p>Este apartamento acomoda até 3 pessoas em uma cama de casal.</p>
                 <ul>
@@ -121,19 +88,19 @@
                     <li>Bancada para trabalho trabalho</li>
                 </ul>
 
-                <a href="#" class="btn">Reservar Agora</a>
+                <a href="https://book.omnibees.com/hotel/19618" class="btn">Reservar Agora</a>
 
             </div>
             <div class="cardBox-slider">
                 <!--Com slider desse tamanho-->
-                <img src="images/suite-dupla-01.jpg" alt="">
+                <img src="images/2 - Acomodações Triplas - 201 e 301/Suíte Tripla - (1).jpg" alt="">
 
             </div>
         </div>
 
         <div class="cardBox-container">
             <div class="cardBox-suite">
-                <h3>Suites Quadrupla</h3>
+                <h3>Mergulho aquático Marinho</h3>
 
                 <p>Este apartamento acomoda até 4 pessoas em uma cama de casal.</p>
                 <ul>
@@ -148,19 +115,19 @@
                     <li>Bancada para trabalho trabalho</li>
                 </ul>
 
-                <a href="#" class="btn">Reservar Agora</a>
+                <a href="https://book.omnibees.com/hotel/19618" class="btn">Reservar Agora</a>
 
             </div>
             <div class="cardBox-slider">
                 <!--Com slider desse tamanho-->
-                <img src="images/suite-dupla-01.jpg" alt="">
+                <img src="images/3 - Acomodações Quádruplas - 104, 203, 204, 205 e 304/Suíte Quádrupla - (1).jpg" alt="">
 
             </div>
         </div>
 
         <div class="cardBox-container">
             <div class="cardBox-suite">
-                <h3>Suites Quintupla</h3>
+                <h3>Passeio de Bugre</h3>
 
                 <p>Este apartamento acomoda até 5 pessoas em uma cama de casal.</p>
                 <ul>
@@ -175,12 +142,12 @@
                     <li>Bancada para trabalho trabalho</li>
                 </ul>
 
-                <a href="#" class="btn">Reservar Agora</a>
+                <a href="https://book.omnibees.com/hotel/19618" class="btn">Reservar Agora</a>
 
             </div>
             <div class="cardBox-slider">
                 <!--Com slider desse tamanho-->
-                <img src="images/suite-dupla-01.jpg" alt="">
+                <img src="images/4 - Acomodações Quíntuplas e Sextuplas - 105/Suíte Quíntupla e Sextupla - (1).jpg" alt="">
 
             </div>
         </div>
@@ -233,30 +200,16 @@
 
     <footer class="footer">
         <div class="social">
-            <a href="#"><i class="bi bi-facebook"></i></a>
-            <a href="#"><i class="bi bi-whatsapp"></i></a>
-            <a href="#"><i class="bi bi-instagram"></i></a>
-            <a href="#"><i class="bi bi-instagram"></i></a>
+          <a href="#"><i class="bi bi-facebook"></i></a>
+          <a href="#"><i class="bi bi-whatsapp"></i></a>
+          <a href="#"><i class="bi bi-instagram"></i></a>
+          <a href="#"><i class="bi bi-instagram"></i></a>
         </div>
-
-
-        <!--
-
-        <div class="fale-conosco">
-
-        </div>
-        <div class="endereco">
-
-        </div>
-
-        -->
 
         <p class="copyright">@ 2024 Pousada Sol e Descanso | All rights Reserved</p>
+      </footer>
 
-
-    </footer>
-
-    <script src="script.js"></script>
+    <script src="slide-show-suite.js"></script>
     <script src="https://kit.fontawesome.com/52262753f8.js" crossorigin="anonymous"></script>
 </body>
 
