alterações do layout principal

--- a/index.html
+++ b/index.html
@@ -417,8 +417,8 @@
           <div class="person">
             <img src="images/people-06.jpg" alt="">
             <div class="info-person">
-              <p class="nome-person">vandaluzieralmeidadasilva</p>
-              <p class="func-person">Vanda Luzier Almeida da Silva</p>
+              <p class="nome-person">vandaluzieralmeida</p>
+              <p class="func-person">Vanda Luzier Almeida</p>
             </div>
           </div>
         </div>
@@ -439,8 +439,8 @@
         </div>
 
       </div>
-      <div class="swiper-button-next .nav-btn"></div>
-      <div class="swiper-button-prev .nav-btn"></div>
+      <div id="swiper-btn-next" class="swiper-button-next"></div>
+      <div id="swiper-btn-prev" class="swiper-button-prev"></div>
       <div class="swiper-pagination"></div>
     </div>
 
@@ -471,7 +471,7 @@
       <a href="#"><i class="bi bi-facebook"></i></a>
       <a href="#"><i class="bi bi-whatsapp"></i></a>
       <a href="#"><i class="bi bi-instagram"></i></a>
-      <a href="#"><i class="bi bi-instagram"></i></a>
+      
     </div>
     <ul class="list">
       <li><a href="#home">Inicial</a></li>
