--- a/atividades.html
+++ b/atividades.html
@@ -66,7 +66,7 @@
 
             <div class="cardBox-slider">
                 <!--Com slider desse tamanho-->
-                <img src="images/suite-dupla-01.jpg" alt="">
+                <img src="images/atividades/02.png" alt="">
 
             </div>
         </div>
@@ -93,7 +93,7 @@
             </div>
             <div class="cardBox-slider">
                 <!--Com slider desse tamanho-->
-                <img src="images/2 - Acomodações Triplas - 201 e 301/Suíte Tripla - (1).jpg" alt="">
+                <img src="images/atividades/04.png" alt="">
 
             </div>
         </div>
@@ -120,37 +120,12 @@
             </div>
             <div class="cardBox-slider">
                 <!--Com slider desse tamanho-->
-                <img src="images/3 - Acomodações Quádruplas - 104, 203, 204, 205 e 304/Suíte Quádrupla - (1).jpg" alt="">
+                <img src="images/atividades/08.png" alt="">
 
             </div>
         </div>
 
-        <div class="cardBox-container">
-            <div class="cardBox-suite">
-                <h3>Passeio de Bugre</h3>
-
-                <p>Este apartamento acomoda até 5 pessoas em uma cama de casal.</p>
-                <ul>
-                    <li>Camas de molas ensacadas de solteiro / casal</li>
-                    <li>Ar condicionado Sprit Super conforti</li>
-                    <li>Frigobar</li>
-                    <li>Internet Wi-Fi</li>
-                    <li>Armário de roupa</li>
-                    <li>TV Smart</li>
-                    <li>Enxoval em algodão</li>
-                    <li>Roupa de Banho em Algodão</li>
-                    <li>Bancada para trabalho trabalho</li>
-                </ul>
-
-                <a href="https://book.omnibees.com/hotel/19618" class="btn">Reservar Agora</a>
-
-            </div>
-            <div class="cardBox-slider">
-                <!--Com slider desse tamanho-->
-                <img src="images/4 - Acomodações Quíntuplas e Sextuplas - 105/Suíte Quíntupla e Sextupla - (1).jpg" alt="">
-
-            </div>
-        </div>
+       
         <!--
         <div class="accordion">
             <div class="contentBx">
