--- a/atividades.html
+++ b/atividades.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="suites.css">
+    <link rel="stylesheet" href="atividades.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>Pousada Sol e Descanso</title>
 </head>
@@ -54,19 +54,18 @@
                         <li>Ilha do farol (Reserva da Marinha)</li>
                         <li>Face do gorila</li>
                         <li>Gruta do amor</li>
-                        <li>Fenda de NS°</li>
                         <li>Gruta azul</li>
                         <li>Buraco do meteoro</li>
                         <li>Enseada da Praia do Forno</li>
                     </ul>
-
+                
                 <a href="https://book.omnibees.com/hotel/19618" class="btn">Saiba Mais</a>
 
             </div>
 
             <div class="cardBox-slider">
                 <!--Com slider desse tamanho-->
-                <img src="images/atividades/02.png" alt="">
+                <img src="images/atividades/00.jpg" alt="">
 
             </div>
         </div>
@@ -75,25 +74,27 @@
             <div class="cardBox-suite">
                 <h3>Passeio de Bugre</h3>
 
-                <p>Este apartamento acomoda até 3 pessoas em uma cama de casal.</p>
+                <p>O Passeio de Bugre em Arraial do Cabo é uma aventura imperdível 
+                    para quem busca adrenalina e beleza natural. Com um guia experiente 
+                    ao volante, você irá explorar as praias paradisíacas da região de 
+                    forma emocionante e segura.</p>
                 <ul>
-                    <li>Camas de molas ensacadas de solteiro / casal</li>
-                    <li>Ar condicionado Sprit Super conforti</li>
-                    <li>Frigobar</li>
-                    <li>Internet Wi-Fi</li>
-                    <li>Armário de roupa</li>
-                    <li>TV Smart</li>
-                    <li>Enxoval em algodão</li>
-                    <li>Roupa de Banho em Algodão</li>
-                    <li>Bancada para trabalho trabalho</li>
+
+                    <li>Guia turístico</li>
+                    <li>Momentos de relaxamento </li>
+                    <li>Diversão em família</li>
+                    <li>Aventura com amigos</li>
+                    <li>Condução segura </li>
+                    <li>Experiência inesquecível</li>
+
                 </ul>
 
-                <a href="https://book.omnibees.com/hotel/19618" class="btn">Reservar Agora</a>
+                <a href="https://book.omnibees.com/hotel/19618" class="btn">Saiba Mais</a>
 
             </div>
             <div class="cardBox-slider">
                 <!--Com slider desse tamanho-->
-                <img src="images/atividades/04.png" alt="">
+                <img src="images/atividades/01.png" alt="">
 
             </div>
         </div>
@@ -115,7 +116,7 @@
                     <li>Bancada para trabalho trabalho</li>
                 </ul>
 
-                <a href="https://book.omnibees.com/hotel/19618" class="btn">Reservar Agora</a>
+                <a href="https://book.omnibees.com/hotel/19618" class="btn">Saiba Mais</a>
 
             </div>
             <div class="cardBox-slider">
