--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
       <li><a href="#contato">Contato</a></li>
     </ul>
     <p class="copyright">@ 2024 Pousada Sol e Descanso | All rights Reserved</p>
-    <a href="https://api.whatsapp.com/send/?phone=5522998040507&amp;text=Olá, eu gostaria de receber mais informações. (Passeio de Barco)" class="btn-whatsapp"><i class="bi bi-whatsapp"></i></a>
+    <a href="https://api.whatsapp.com/send/?phone=5522998040507&amp;text=Olá, eu gostaria de receber mais informações." class="btn-whatsapp"><i class="bi bi-whatsapp"></i></a>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script src="https://kit.fontawesome.com/52262753f8.js" crossorigin="anonymous"></script>
