--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
         <div class="slider-item">
           <div class="cardBox-img">
 
-            <img src="images/img-suite-dupla.png">
+            <img src="images/atividades/00.jpg">
 
           </div>
 
@@ -307,7 +307,7 @@
         <div class="slider-item">
           <div class="cardBox-img">
 
-            <img src="images/img-suite-02.png">
+            <img src="images/atividades/01.png">
 
           </div>
 
@@ -316,7 +316,7 @@
         <div class="slider-item">
           <div class="cardBox-img">
 
-            <img src="images/img-suite-01.png">
+            <img src="images/atividades/02.png">
 
           </div>
 
@@ -325,7 +325,7 @@
         <div class="slider-item">
           <div class="cardBox-img">
 
-            <img src="images/img-suite-03.png">
+            <img src="images/atividades/03.png">
 
           </div>
 
@@ -334,7 +334,7 @@
         <div class="slider-item">
           <div class="cardBox-img">
 
-            <img src="images/img-suite-04.png">
+            <img src="images/atividades/04.png">
 
           </div>
 
@@ -343,7 +343,7 @@
         <div class="slider-item">
           <div class="cardBox-img">
 
-            <img src="images/img-suite-05.png">
+            <img src="images/atividades/05.png">
 
           </div>
 
@@ -351,7 +351,7 @@
         <div class="slider-item">
           <div class="cardBox-img">
 
-            <img src="images/img-suite-06.png">
+            <img src="images/atividades/06.png">
 
           </div>
 
@@ -360,7 +360,7 @@
         <div class="slider-item">
           <div class="cardBox-img">
 
-            <img src="images/img-suite-07.png">
+            <img src="images/atividades/07.png">
 
           </div>
         </div>
