alterações na página principal, resolvendo bugs e estilizações sendo consertadas.

--- a/index.html
+++ b/index.html
@@ -14,18 +14,25 @@
 <body>
   <header class="header">
     <a href="#home" class="logo">
+
       <img src="images/logo-branca.png" alt="">
     </a>
-    <!--icone de hamburguer-->
-    <i class="bi bi-list" id="menu-icon"></i>
+  
     <nav class="navbar">
-      <a href="#home" class="active">Inicial</a>
+      <a href="#home">Inicial</a>
       <a href="#acomodacoes">Acomodações</a>
       <a href="#pousada">Pousada</a>
       <a href="#atividades">Atividades</a>
       <a href="#depoimentos">Depoimentos</a>
       <a href="#contato">Contato</a>
     </nav>
+  
+    <!--icone de hamburguer-->
+    <div class="mobile-menu">
+      <div class="line1"></div>
+      <div class="line2"></div>
+      <div class="line3"></div>
+    </div>
   </header>
 
   <section class="home" id="home">
@@ -471,7 +478,7 @@
       <a href="#"><i class="bi bi-facebook"></i></a>
       <a href="#"><i class="bi bi-whatsapp"></i></a>
       <a href="#"><i class="bi bi-instagram"></i></a>
-      
+            
     </div>
     <ul class="list">
       <li><a href="#home">Inicial</a></li>
